preparing for gh-pages deploy

--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "cretrix-todo-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://vahan-sahakyan.github.io/cretrix-todo-app/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
